feat(g1,zgc): fold deferred follow-ups into the G1 graduate — GC log G1Stats, JFR-aware doctor rules, ZGC residual events, Prometheus per-collector labels, frontend breakdown panel
Folds every "Out of scope" item from the initial graduate commit back into the
same PR, per user request. The four deferred follow-ups are now in-scope and
green:

1. GC log parser G1Stats integration
   - New `G1Stats` data class capturing evacuation failures, humongous
     allocation cycles, peak humongous regions, Mixed / Prepare-Mixed pause
     counts, concurrent-cycle markers, and Full-GC observation.
   - `GcLogParser.parseWithPhases` populates G1Stats alongside the generic
     event list in a single line scan. Patterns from the earlier commit
     (G1_EVAC_FAILURE / G1_HUMONGOUS_LINE / G1_MIXED_PAUSE / G1_PREPARE_MIXED
     / G1_CONCURRENT_BEG) are now actually consumed.
   - `ParseResult.g1Stats()` exposes the result; `GcLogAnalysis` gains a new
     constructor overload + `g1Stats()` accessor (always non-null, defaults
     to G1Stats.empty()).
   - `GcLogAnalyzer.analyze(ParseResult)` overload forwards G1Stats through;
     backward-compatible `analyze(events)` overload preserved.

2. JFR-aware doctor rules (3 new rules, backed by GC log)
   - `G1EvacuationFailureRule`     (CRITICAL): evacuation failures > 0.
   - `G1MixedStarvationRule`       (WARNING):  ≥ 2 concurrent cycles, 0 Mixed.
   - `G1HumongousPressureRule`     (WARNING):  ≥ 3 humongous cycles, OR
     peak ≥ 10 humongous regions with default region size.
   - `JvmSnapshot` extended with a `g1Stats()` field (always non-null).
   - `JvmSnapshotCollector` auto-detects `-Xlog:gc*:file=<path>` from VM
     input arguments and parses up to 10 MB of the log to populate G1Stats.
     Failures are best-effort (added to warnings, never thrown).
   - `DoctorEngine` registers all 3 new rules.

3. ZGC residual JFR events
   - `ZgcJfrCollector` now subscribes `jdk.ZPageAllocation` (commit count)
     and `jdk.ZUncommit` (bytes r